fix: 替换 isBlank() 为 Java 8 兼容写法 trim().isEmpty()
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>